--- a/public/admin/css/style_menu_vertical.css
+++ b/public/admin/css/style_menu_vertical.css
@@ -15,8 +15,11 @@
 }
 .main-menu{
   display: block;
-  height: calc(100% - 70px);
+  height: calc(100% - 55px);
   overflow: auto;
+}
+.main-menu .nav-item{
+    border-bottom: 1px solid #313c42;
 }
 .root-right{
   overflow: hidden;
@@ -35,7 +38,7 @@ p{
   margin-bottom:inherit;
 }
 .root-left {
-  flex: 0 0 15%;
+  flex: 0 0 12%;
   position: sticky;
   top: 0;
   height: 100vh;
@@ -44,9 +47,9 @@ p{
 }
 
 .top_menu{
-  padding: 20px;
+  padding: 11px 15px;
   position: fixed;
-  width: calc(100% - 15%);
+  width: calc(100% - 12%);
   background: white;
   box-shadow: 2px 1px 3px 1px #ebebeb;
   right: 0;
@@ -56,7 +59,7 @@ p{
 .navigation .nav-top a.show{
   position: relative;
   padding: 8px;
-  height: 70px;
+  height: 55px;
   width: 100%;
   background: inherit;
 }
@@ -76,7 +79,7 @@ p{
   object-fit: contain;
 }
 .navigation .nav-top a.show img{
-  padding: 6px;
+  padding: 10px;
 }
 /* FIX SMALL NAVIGATION */
 button.small-menu {
@@ -145,29 +148,54 @@ button.small-menu {
   cursor: pointer;
 }
 .menu-anchor button.menu-show-icon{
-  padding: 12px 16px;
+  padding: 5px 10px;
   background: transparent;
   border: none;
-  color: white;
+  color: rgba(163,175,183,.9);
   margin-right: 4px;
+  font-size: 18px;
 }
 .main_admin{
-  margin-top: calc(70px);
+  margin-top: calc(55px);
 }
 .main-menu li a{
   flex: 1;
+}
+.main-menu .sub li a{
+    font-size: 13px;
+    border-left: 2px solid transparent;
 }
 .main-menu .sub li a:hover {
   background-color: #1b2327;
   color: #ffffff !important;
   border-left: 2px solid #2ea1f8;
 }
+.main-menu .sub li a:hover span.txt {
+    color: 
+}
 .main-menu li a:hover {
   background: inherit;
 }
+.edit-slug{
+    position: relative;
+    padding-right: 20px;
+}
+.edit-slug .get-link{
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.main_table{
+    font-size: 13px;
+}
 @keyframes growth{
-  to{
-    transform: scale(1);
-    opacity: 1;
-  }
+    to{
+        transform: scale(1);
+        opacity: 1;
+    }
 }
