--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -458,7 +458,6 @@ div[data-menu=off] .nav-trigger {
     font-size: 2.5rem;
     margin-right: 15px;
     display: inline-block;
-    margin-bottom: 5px;
 }
 
 .pull-left .select2-container .select2-selection--single {
@@ -2327,10 +2326,6 @@ table {
 
 /* add more */
 
-#maincontent {
-    height: 100vh;
-}
-
 #mainedit-permis .bigtitle {
     background: #fa430f !important;
 }
@@ -2666,7 +2661,8 @@ table {
 
 .h-user-online ul.h-user__list{
     display: flex;
-    flex-wrap: wrap;
+    white-space: nowrap;
+    overflow: hidden;
     margin-right: 60px;
 }
 
@@ -2677,8 +2673,7 @@ table {
     padding: 4px 20px;
     color: white;
 }
-.h-user-online ul.h-user__list-all:hover,
-.h-user-online .count:hover ~ ul.h-user__list-all{
+.h-user-online ul.h-user__list-all.show{
     transform: scale(1);
     opacity: 1;
     pointer-events: all;
@@ -2735,6 +2730,11 @@ table {
     justify-content: space-between;
     box-shadow: 0px 1px 6px 0.5px #ebebeb;
     border-radius: 5px;
+}
+
+.h-user-online h5{
+    margin-right: 50px;
+    white-space: nowrap;
 }
 
 ins {
