--- a/public/frontend/scss/mobile.scss
+++ b/public/frontend/scss/mobile.scss
@@ -36,6 +36,11 @@ $cltext: #676767;
 		transition-duration: 0.7s, 0.7s, 0.25s;
 		transition-timing-function: ease;
 	}
+	.form-contact-sidebar,.doctor-sidebar-info{
+		position: sticky;
+		top: 10px;
+		z-index: 2;
+	}
 }
 
 @media (min-width: 1200px) {
@@ -44,6 +49,22 @@ $cltext: #676767;
 	}
 	.col-xl-72{
 		width: 72%;
+	}
+	.header-menu-wrapper{
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		z-index: 999;
+	}
+	body{
+		padding-top: 120px;
+	}
+	.form-contact-sidebar,.doctor-sidebar-info{
+		top: 130px;
+	}
+	.toc-wrapper{
+		top: 119px;
 	}
 }
 @media (min-width: 1400px) {
