--- a/public/frontend/css/comment.css
+++ b/public/frontend/css/comment.css
@@ -253,13 +253,19 @@ p.comment-box__title:first-letter {
     border: 1px solid var(--color-main);
     box-shadow: 0 0 6px 0.4px var(--color-main);
 }
+.comment-box__form input,
+.rep-comment input{
+    outline: none;
+    box-shadow: none;
+    margin-bottom: 8px;
+    border: 1px solid var(--color-star-evalue);
+}
 .rep-comment textarea{
     padding: 12px 16px;
     width: 100%;
     outline: none;
     border: 1px solid var(--color-star-evalue);
-    border-radius: 5px;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     transition: all 0.3s ease-in;
 }
 .rep-comment button:hover{
